# ProbaFight

./: CMakeLists.txt
casino_game/: CMakeLists.txt  main.cpp  utils.cpp
casino_game/includes/: loiProba.h  utils.h
proj_test/: CMakeLists.txt  generators.cpp  main.cpp  quit.cpp
proj_test/includes/: generators.h  quit.h  utils.h
tests_proba/: CMakeLists.txt  main.cpp
tests_proba/includes/: loiProba.h
